[ACS-4036] Move ay11 focus feature to one file and fix 'jumping' (#2805)
* [ACS-4036] Move ay11 focus feature to one file and fix 'jumping'

* [ACS-4036] Move ay11 stylesheet to correct folder

--- a/app/src/app/content-plugin/ui/mixins.scss
+++ b/app/src/app/content-plugin/ui/mixins.scss
@@ -15,7 +15,12 @@
   overflow: hidden;
 }
 
+@mixin rounded-outline($border-color: var(--theme-blue-button-color), $thickness: 2px, $radius: 4px) {
+  outline: $thickness solid $border-color;
+  border-radius: $radius;
+}
+
 @mixin rounded-border($border-color: var(--theme-blue-button-color), $thickness: 2px, $radius: 4px) {
-  border: $thickness solid $border-color;
+  border: $thickness solid $border-color !important;
   border-radius: $radius;
 }
