--- a/app/src/app/content-plugin/ui/overrides/adf-pagination.theme.scss
+++ b/app/src/app/content-plugin/ui/overrides/adf-pagination.theme.scss
@@ -14,22 +14,6 @@
     line-height: 24px !important;
     padding: 16px 0;
     background: var(--theme-pagination-background-color);
-
-    &__perpage-block,
-    &__actualinfo-block {
-      .mat-icon-button {
-        &:focus {
-          border: none;
-          left: 3px;
-        }
-
-        &.cdk-focused {
-          .mat-icon {
-            @include rounded-border();
-          }
-        }
-      }
-    }
   }
 
   .adf-pagination__range-block {
