--- a/app/src/app/content-plugin/ui/theme.scss
+++ b/app/src/app/content-plugin/ui/theme.scss
@@ -51,145 +51,6 @@ $contrast-gray: #646569;
   color: $contrast-gray !important;
 }
 
-.mat-icon-button, .mat-button, .mat-checkbox, .mat-raised-button {
-  &:focus {
-    @include rounded-border();
-  }
-  .mat-ripple-element {
-    display: none;
-  }
-  &.cdk-focused {
-    .mat-button-focus-overlay {
-      display: none;
-    }
-    .mat-checkbox-ripple {
-      @include rounded-border();
-      height: 22px;
-      width: 22px;
-      left: calc(50% - 13px);
-      top: calc(50% - 13px);
-    }
-  }
-}
-
-.adf-content-node-selector-content-list .adf-datatable-list .adf-datatable-selected > svg {
-  fill: var(--theme-blue-button-color) !important;
-}
-
-.mat-list-base .mat-list-option:focus {
-  background-color: white;
-  .mat-list-item-content {
-    border: 2px solid var(--theme-blue-button-color);
-  }
-}
-
-.mat-menu-item {
-  .mat-menu-ripple {
-    display: none;
-  }
-  &:focus {
-    @include rounded-border();
-    background-color: white;
-  }
-  &.cdk-keyboard-focused:not([disabled]) {
-    background-color: white;
-  }
-}
-
-.mat-option {
-  &.cdk-focused {
-    .mat-option-ripple {
-      @include rounded-border();
-    }
-  }
-}
-
-.mat-slide-toggle {
-  .mat-slide-toggle-thumb {
-      width: 15px;
-      height: 15px;
-      transform: translate(20%, 50%);
-      background-color: #484a4d;
-  }
-
-  .mat-slide-toggle-bar {
-    border-radius: 15px;
-    height: 20px;
-  }
-
-  .mat-slide-toggle-thumb-container {
-    top: -5px;
-  }
-
-  &.mat-primary.mat-checked:not(.mat-disabled) {
-    .mat-slide-toggle-bar {
-      background-color: var(--theme-blue-button-color);
-    }
-    .mat-slide-toggle-thumb {
-      background-color: white;
-    }
-  }
-
-  .mat-slide-toggle-ripple {
-    display: none;
-  }
-  &.cdk-focused {
-    .mat-slide-toggle-bar {
-      border: 2px solid var(--theme-blue-button-color);
-    }
-  }
-}
-
-.mat-stroked-button, .mat-flat-button {
-  &.cdk-focused {
-    .mat-button-ripple.mat-ripple {
-      border: 2px solid var(--theme-blue-button-color);
-      top: -4px;
-      left: -4px;
-      bottom: -4px;
-      right: -4px;
-    }
-  }
-}
-
-.mat-option {
-  &.cdk-focused {
-    .mat-option-ripple {
-      @include rounded-border();
-    }
-  }
-}
-
-.mat-datetimepicker-calendar-body-active .mat-datetimepicker-calendar-body-cell-content:not(.mat-datetimepicker-calendar-body-selected) {
-  background-color: white !important;
-  border: 2px solid var(--theme-blue-button-color);
-}
-
-.mat-datetimepicker-calendar-body-cell-content.mat-datetimepicker-calendar-body-selected {
-  background-color: #2254b2;
-}
-
-.mat-expansion-panel .mat-expansion-panel-header.cdk-keyboard-focused:not([aria-disabled=true]) {
-  background-color: white;
-  border: 2px solid var(--theme-blue-button-color);
-}
-
-.adf-error-snackbar {
-  background-color: #ba1b1b;
-
-  .mat-simple-snackbar, .mat-simple-snackbar-action {
-    color: white;
-  }
-}
-
-.adf-info-snackbar {
-  background-color: var(--theme-blue-button-color);
-
-  .mat-simple-snackbar, .mat-simple-snackbar-action {
-      color: white;
-  }
-}
-
 .adf-empty-content__icon {
   color: $contrast-gray;
 }
